# slurm-usage-history

./: .copier-answers.yml  .env.example  .gitignore  .gitlab-ci.yml  ADMIN_GUIDE.md  ADMIN_SETUP_GUIDE.md  ANSIBLE_DEPLOYMENT.md  ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  CLUSTER_DEPLOYMENT.md  CLUSTER_SETUP.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  DEVELOPMENT.md  DOCKER_README.md  Dockerfile.backend.dev  Dockerfile.frontend  Dockerfile.saml-idp  INSTALL.md  LOCAL_DEV_READY.md  MANIFEST.in  Makefile  Makefile.docker  PACKAGING.md  QUICKSTART.md  README.md  README_DOCKER.md  README_NEW_ARCHITECTURE.md  SAML_ADMIN_SETUP.md  SECURITY.md  TESTING_GUIDE.md  TESTING_README.md  build_frontend.sh  dev-start.sh  docker-compose.dev.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  quick_test.sh  test_cluster_system.sh  (+3 more)
.github/workflows/: tests.yml
.gitlab/workflows/: test_code.yml
Notebooks/: Untitled.ipynb
ansible/: DAIC_DEPLOYMENT.md  DEPLOYMENT_README.md  QUICKSTART.md  README.md  SECRETS.md  hosts  inventory-daic.yml  inventory.yml.example  playbook-update-nginx.yml  playbook.yml
ansible/files/saml/certs/: README.md
ansible/group_vars/: all.yml.example  daic.yml  secrets.yml.example
ansible/host_vars/: README.md  example.yml
ansible/templates/: env.j2  nginx-merged.conf.j2  nginx-testing.conf.j2  nginx.conf.j2  saml_settings.json.j2  slurm-usage-backend.service.j2
backend/: .env.example  README.md  create_admin.py  requirements.txt  run.py
backend/app/: config.py  datastore_singleton.py  main.py
backend/app/api/: admin.py  agent.py  charts.py  config_admin.py  dashboard.py  data.py  reports.py  saml.py
backend/app/core/: admin_auth.py  agent_auth.py  auth.py  config.py  saml_auth.py
backend/app/db/: __init__.py  clusters.py
backend/app/models/: admin_models.py  data_models.py
backend/app/services/: node_discovery.py
backend/app/services/charts/: __init__.py  chart_helpers.py  distribution_generators.py  node_generators.py  timeline_generators.py
backend/app/services/reports/: __init__.py  comparison_metrics.py  pdf_charts.py  report_formatters.py  report_generator.py  report_helpers.py
backend/app/static/: index.html
backend/app/static/assets/: index-Bo91dqcz.css  index-BqbOr_r6.css
backend/config/: clusters.yaml
cluster-agent/: FILES.txt  QUICKSTART.md  README.md  config.json.example  install.sh  requirements.txt  slurm-usage-history-exporter.py  slurm-usage-history-exporter.service  slurm-usage-history-exporter.timer  test_api.sh
config/: clusters.yaml
docker/: Dockerfile.backend  Dockerfile.frontend.dev
docker/saml-config/: settings.json
docker/saml-idp/: authsources.php  saml20-sp-remote.php
docs/: BASIC_AUTH_SETUP.md  index.md
docs/deployment/: phased-deployment.md  saml-setup.md
docs/development/: changelog.md  local-development.md  pypi-publish.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: cluster-setup.md  configuration.md
frontend/: .env.example  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  react-plotly.d.ts
frontend/src/api/: adminClient.ts  client.ts
frontend/src/components/: Charts.tsx  Filters.tsx  Footer.tsx  Header.tsx  ReportControls.tsx  ReportGenerator.tsx  ReportPreview.tsx  StatsCards.tsx
frontend/src/components/charts/: GaugeChart.tsx  HistogramChart.tsx  PieChart.tsx  StackedAreaChart.tsx  StackedPercentageChart.tsx  TimelineChart.tsx  chartHelpers.ts  index.ts
frontend/src/components/charts/sections/: ResourcesSection.tsx  TimingSection.tsx  UsageSection.tsx  UsersJobsSection.tsx  index.ts
frontend/src/components/reports/: ReportBreakdowns.tsx  ReportDistributions.tsx  ReportOverview.tsx  ReportSummaryCards.tsx  ReportTimelines.tsx  reportHelpers.ts
frontend/src/hooks/: useDarkMode.ts  useOverviewFilters.ts  useProcessedNodeData.ts  useReportFilters.ts  useTimingStats.ts
frontend/src/pages/: AdminClusters.css  AdminClusters.tsx  AdminConfig.css  AdminConfig.tsx  AdminLogin.css  AdminLogin.tsx  AdminUsers.tsx  ClusterDetails.tsx  Dashboard.tsx
frontend/src/theme/: colors.ts
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
public/: 404.html  index.html  objects.inv
scripts/: cleanup_old_data.py  consolidate_data.py  generate_test_cluster_data.py
src/slurm_usage_history/: __init__.py  tools.py
src/slurm_usage_history/app/: DataStore.py  account_formatter.py  app.py  callbacks.py  datastore.py  duckdb_datastore.py  layout.py  main.py  node_config.py
src/slurm_usage_history/app/tests/: test_main.py
src/slurm_usage_history/backend/: __init__.py  cli.py
src/slurm_usage_history/scripts/: cluster_agent.py  exporter.py  get_weekly_usage.py  waiting_times.py
templates/: base.html  index.html
tests/: test_chart_generation.py  test_datastore.py  test_node_generators.py  test_tools.py
